bynkc/tests/fixtures/positive/16_function_call/input.karn
commons demo {
  fn double(x: Int) -> Int {
    x * 2
  }

  fn quadruple(x: Int) -> Int {
    double(double(x))
  }
}
