bynkc/tests/fixtures/negative/155_fn_without_call_nonfn_position/input.karn
commons bad

fn double(x: Int) -> Int {
  x * 2
}

fn misuse() -> Int {
  let d = double
  5
}
